--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,7 +330,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/po.jpg") top center;
   background-size: cover;
   padding: 0 15px;
 }
@@ -532,7 +532,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/p.jpeg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
