--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,7 +532,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/portfolio.jpg") center center no-repeat;
+  background: url("../img/about.jpg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
